<resources>
    <string name="app_name">Medical Desertification</string>
    <string name="connection">Connexion</string>
    <string name="subscribe">S\'inscrire</string>
    <string name="this_is_imageview">Image</string>
    <string name="prompt_email">Nom d\'utilisateur</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="invalid_username">Nom d\'utilisateur invalide</string>
    <string name="invalid_password">Mot de passe invalide</string>
    <string name="login_failed">"Connexion échouée"</string>
    <string name="apply">Se connecter</string>
    <string name="hello">Bonjour</string>
    <string name="life_cycle">Cycle de vie</string>
    <string name="save">Sauvegarde</string>
    <string name="permissions">Permissions</string>
    <string name="web_services">Webservices</string>
    <string name="this_is_life_cycle_view">Bouton cycle de vie</string>
    <string name="this_is_save_view">Bouton sauvegarde</string>
    <string name="this_is_permissions_view">Bouton permissions</string>
    <string name="this_is_web_services_view">Bouton web services</string>
    <string name="on_start_state">Application en fonctionnement</string>
    <string name="disconnect">Déconnexion</string>
    <string name="name">Prénom</string>
    <string name="surname">Nom de famille</string>
    <string name="date_of_birth">Date de naissance</string>
    <string name="informations">Accéder aux informations</string>
    <string name="picture">Prendre une photo</string>
    <string name="number_tel">Numéro</string>
    <string name="registration">Enregistrement</string>
    <string name="register">Inscrivez - vous !</string>
    <string name="passw">Mot de passe</string>
    <string name="confirmPassw">Confirmer le mot de passe</string>
    <string name="email">Adresse E-mail</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="contact_data">contact@aled.com</string>
    <string name="newAccount">Vous n\'avez pas encore de compte ?</string>
    <string name="do_diagnostic">Faire Mon Diagnostic</string>
    <string name="titleALEDWeb">Site "ALED"</string>
    <string name="titleCustomerService">Service Client</string>
    <string name="titleContact">Contact</string>
    <string name="titleAboutUs">Sur nous</string>
    <string name="faq">Questions fréquentes</string>
    <string name="webSiteDescription">Medical Desertification est un site web sur lequel vous pouvez faire votre propre diagnostic. Cela prévient la pénurie de médecin en vous permettant d\'avoir un pre-diagnostic rapide, gratuit, et aide dans l\'organisation de la journée de visites à domicile. </string>
    <string name="contactInfo">Informations</string>
    <string name="myAccount">Mon compte</string>
    <string name="generalPolicy">Conditions Générales</string>
    <string name="welcome"><u><b>Medical Desertification</b></u> vous souhaite la bienvenue sur notre application</string>
    <string name="welcomeConnected"><u>Medical Desertification</u>\n<b>Bienvenue</b></string>
    <string name="feelSick">Remplir le formulaire pour avoir un pré-diagnostic :</string>
    <string name="accessForm">Accéder au formulaire</string>
    <string name="notAsRealDoctor">En aucun cas les résultats donnés ne remplacent un vrai médecin</string>
    <string name="testFollowLine"><u>Etape 1</u> : Test de mouvement\nSuivez la forme en commençant par le point rouge en haut à gauche\n
                                        Une fois le test commencé, une vidéo de vous est prise</string>
    <string name="next">Suivant</string>
    <string name="edit">Edit</string>
    <string name="start">Commencez</string>
    <string name="starToFollow">Etoile à contourner</string>
    <string name="emergencyCall">Appel d\'urgence</string>
    <string name="camera">Camera</string>
    <string name="emergency">C\'est une urgence \nAppuyez sur le bouton !</string>
    <string name="goHomePage">Aller sur la page d\'accueil</string>
    <string name="seeMap">Lancer la carte</string>
    <string name="history">Voir l\'historique</string>
    <string name="stringPasswordInfo">Le mot de passe doit contenir au moins un nombre et une majuscule</string>
    <string name="emailError">S\'il vous plaît entrez un email valide</string>
    <string name="noSpace">Il ne faut pas d\'espace au prénom et nom de famille</string>
    <string name="noSpaceSecretAnswer">Evitez de mettre plusieurs mots pour mieux vous souvenir de votre réponse secrète</string>
    <string name="ok">Tout est  OK</string>
    <string name="emailAlreadyUsed">Cet eMail est déjà utilisé</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="callDoctorNow">Applez un medecin maintenant</string>
    <string name="modifyContactInfo">Modifier vos informations personnelles</string>
    <string-array name="secretQuestion">
        <item>Quelle est la chanson que je déteste le plus ?</item>
        <item>Quel est le nom de mon medecin traitant d\'enfance</item>
        <item>Quel est le nom de famille de mon premier amour ?</item>
        <item>Quel est le nom de mon premier animal domestique ?</item>
        <item>Quel est le nom de mon professeur de primaire ?</item>
    </string-array>
    <string name="editProfile">Modifier son profil</string>
    <string name="toDisconnect">Se déconnecter</string>
    <string name="account">Compte</string>
    <string name="health">Santé</string>
    <string name="callDoctor">Appeler un médecin</string>
    <string name="doDiagnosis">Avoir un diagnostic</string>
    <string name="connect">Se connecter</string>
    <string name="createAccount">Créer un compte</string>
    <string name="contact">Contact</string>
    <string name="about">A propos</string>
    <string name="policy">Mentions Légales</string>
    <string name="clientService">Service Client</string>
    <string name="customerService">Service Client</string>
    <string name="callWithoutConn">Appelez d\'urgence sans être connecté</string>
    <string name="app_name_website">Medical Desertification Website</string>
    <string name="phoneContact">+33 6 12 34 56 78</string>
    <string name="sosDescription">Appuyez pour appeler un médecin immédiatement</string>
    <string name="ines_email">ines.dobosz@hotmail.fr</string>
    <string name="azerty">azerty</string>
    <string name="showHideDescription">Afficher / Cacher le mot de passe</string>
    <string name="yourInfo">Vos Informations personnelles</string>
    <string name="form">Formulaire</string>
    <string name="answer">Réponse</string>
    <string name="male">Homme</string>
    <string name="gender">Genre</string>
    <string name="newPassw">Ecrire le nouveau mot de passe</string>
    <string name="changePassw"><u>Changer votre mot de passe</u></string>
    <string name="formerPassw">Ancien mot de passe</string>
    <string name="confirmNewPassw">Confirmer le nouveau mot de passe</string>
    <string name="confirm">Confirmer</string>
    <string name="PersInfo">Infos Personnelles</string>
    <string name="medicalInfo">Infos Médicales</string>
    <string name="changePersonalInfo"><u>Modifier vos informations personnelles</u></string>
    <string name="passwEditedSuccessfully">Mot de passe modifié avec succès</string>
    <string name="acceptPolicy">J\'accepte la <colorBlue>Politique de Confidentialité</colorBlue></string>
    <string name="acceptDiagnosis">J\'accepte qu\'un pré-diagnostic ne remplace pas un médecin</string>
    <string name="acceptConditions">Veuillez accepter les conditions</string>
    <string name="connectWithFacialRecognation">Se Connecter avec Reconnaissance Faciale</string>
    <string name="height">Taille (cm)</string>
    <string name="weight">Poids</string>
    <string name="changeMedicalInfo"><u>Modifier vos informations médicales</u></string>
    <string name="phoneNumber">Numéro de téléphone</string>
    <string name="secuNumber">Numéro de sécurité sociale</string>
    <string name="changePic">Changer votre photo</string>
    <string name="takePic">Photo</string>
    <string name="privatePolicy">Politique de Confidentialité</string>
    <string name="none">Aucun</string>
    <string name="anxiety">Anxiété</string>
    <string name="arm_pain">Mal au bras</string>
    <string name="back_pain">Mal de dos</string>
    <string name="breathing_difficulties">Difficultés à respirer</string>
    <string name="chills">Frissons</string>
    <string name="cough">Toux</string>
    <string name="delusions">Délires</string>
    <string name="diarrhea">Diarrhée</string>
    <string name="distended_belly">Ventre gonflé</string>
    <string name="ear_pain">Mal à l\'oreille</string>
    <string name="tiredness">Fatigue</string>
    <string name="fever">Fièvre</string>
    <string name="flatulence">Flatulences</string>
    <string name="headache">Maux de tête</string>
    <string name="nausea">Nausées</string>
    <string name="neck_pain">Mal de cou</string>
    <string name="nosebleed">Saignements de nez</string>
    <string name="permanent_thrist">Soif permanente</string>
    <string name="stomachache">Maux d\'estomac</string>
    <string name="sweat">Transpiration</string>
    <string name="tremor">Tremblements</string>
    <string name="vertigo">Vertiges</string>
    <string name="is_your_temperature_over_38_c_100_4_f">Votre température est-elle supérieure à 38°C/100,4°F ?</string>
    <string name="are_you_feeling_cold_having_chills">Avez-vous froid / des frissons ?</string>
    <string name="do_you_have_muscular_pain_headache">Avez-vous des douleurs musculaires / des maux de tête ?</string>
    <string name="have_you_lost_your_appetite">Avez-vous des pertes d\'appétit ?</string>
    <string name="do_you_have_stomach_cramps">Avez-vous des crampes d\'estomac ?</string>
    <string name="do_you_often_have_indigestions">Souffrez-vous d\'indigestions fréquentes ?</string>
    <string name="are_you_constipated">Êtes-vous constipé ?</string>
    <string name="are_you_dizzy">Êtes-vous étourdi ?</string>
    <string name="do_you_feel_nauseous">Vous sentez-vous nauséeux ?</string>
    <string name="did_you_have_a_recent_injury">Avez-vous eu une blessure récente ?</string>
    <string name="do_you_take_drugs">Prenez-vous des drogues ?</string>
    <string name="do_you_have_ibs_irritable_bowel_syndrome">Avez-vous un IBS (syndrome du côlon irritable) ?</string>
    <string name="do_you_have_a_broken_bone_in_your_arm">Avez-vous une fracture au bras ?</string>
    <string name="do_you_have_a_loss_of_sensitivity_in_the_zone">Avez-vous une perte de sensibilité dans la zone ?</string>
    <string name="do_you_practice_sport_at_a_high_intensity">Faites-vous du sport à haute intensité ?</string>
    <string name="do_you_have_allergies">Avez-vous des allergies ?</string>
    <string name="do_you_have_a_fever_38_c_100_4_f"><![CDATA[Do you have a fever (>38°C/100,4°F)]]></string>
    <string name="did_you_have_a_prolonged_immersion_in_water_or_are_you_in_a_cold_environment">Avez-vous eu une immersion prolongée dans l\'eau ou dans un environnement froid ?</string>
    <string name="did_you_have_a_recent_emotional_pain">Avez-vous eu récemment une douleur émotionnelle ?</string>
    <string name="do_you_have_hallucination">Avez-vous des hallucinations ?</string>
    <string name="are_you_having_mood_swings">Avez-vous des sautes d\'humeur ?</string>
    <string name="appointment">Rendez-vous</string>
    <string name="formFirstPage"><u>Etape 2</u> : Remplissez vos symptômes (2 maximum).\nCliquez OK une fois terminé.</string>
</resources>