<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
        <item android:title="@string/account">
            <menu>
            <item
                android:id="@+id/nav_disconnect"
                android:icon="@drawable/log_out"
                android:title="@string/toDisconnect">

            </item>

            <item
                android:id="@+id/nav_edit_profile"
                android:icon="@drawable/ic_edit"
                android:title="@string/editProfile">

        </item>

            </menu>
        </item>
    <item android:title="@string/health">
        <menu>
<!--            <item-->
<!--                android:id="@+id/nav_call_doctor"-->
<!--                android:icon="@drawable/common_full_open_on_phone"-->
<!--                android:title="@string/callDoctor" />-->
            <item
                android:id="@+id/nav_do_diagnosis"
                android:icon="@drawable/form_logo"
                android:title="@string/doDiagnosis" />
        </menu>
    </item>
    <item android:title="@string/contact">
        <menu>
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_share"
                android:title="@string/contact" />
            <item
                android:id="@+id/nav_appointment"
                android:icon="@drawable/appointment"
                android:title="@string/appointment" />
        </menu>
    </item>


</menu>