<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".form.FormActivity">


    <TextView
        android:id="@+id/formFirstPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:text="@string/formFirstPage" />

    <com.google.android.material.chip.Chip
        android:id="@+id/activity_form0_chip0"
        style="@style/Widget.MaterialComponents.Chip.Filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/none"
        android:textColor="#FFFFFF"
        android:theme="@style/Theme.MaterialComponents.Light"
        app:chipBackgroundColor="#353131" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

            <com.google.android.material.chip.Chip
                android:id="@+id/activity_form0_chip1"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anxiety"
                android:theme="@style/Theme.MaterialComponents.Light" />

            <com.google.android.material.chip.Chip
                android:id="@+id/activity_form0_chip2"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arm_pain"
                android:theme="@style/Theme.MaterialComponents.Light" />

            <com.google.android.material.chip.Chip
                android:id="@+id/activity_form0_chip3"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back_pain"
                android:theme="@style/Theme.MaterialComponents.Light" />

            <com.google.android.material.chip.Chip
                android:id="@+id/activity_form0_chip4"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/breathing_difficulties"
                android:theme="@style/Theme.MaterialComponents.Light" />

            <com.google.android.material.chip.Chip
                android:id="@+id/activity_form0_chip5"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chills"
                android:theme="@style/Theme.MaterialComponents.Light" />

            <com.google.android.material.chip.Chip
                android:id="@+id/activity_form0_chip6"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cough"
                android:theme="@style/Theme.MaterialComponents.Light" />

            <com.google.android.material.chip.Chip
                android:id="@+id/activity_form0_chip7"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delusions"
                android:theme="@style/Theme.MaterialComponents.Light" />

            <com.google.android.material.chip.Chip
                android:id="@+id/activity_form0_chip8"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diarrhea"
                android:theme="@style/Theme.MaterialComponents.Light" />

            <com.google.android.material.chip.Chip
                android:id="@+id/activity_form0_chip9"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distended_belly"
                android:theme="@style/Theme.MaterialComponents.Light" />

            <com.google.android.material.chip.Chip
                android:id="@+id/activity_form0_chip10"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ear_pain"
                android:theme="@style/Theme.MaterialComponents.Light" />

            <com.google.android.material.chip.Chip
                android:id="@+id/activity_form0_chip11"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tiredness"
                android:theme="@style/Theme.MaterialComponents.Light" />
            </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <com.google.android.material.chip.Chip
                android:id="@+id/activity_form0_chip12"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fever"
                android:theme="@style/Theme.MaterialComponents.Light" />


            <com.google.android.material.chip.Chip
                android:id="@+id/activity_form0_chip13"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flatulence"
                android:theme="@style/Theme.MaterialComponents.Light" />

            <com.google.android.material.chip.Chip
                android:id="@+id/activity_form0_chip14"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/headache"
                android:theme="@style/Theme.MaterialComponents.Light" />

            <com.google.android.material.chip.Chip
                android:id="@+id/activity_form0_chip15"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nausea"
                android:theme="@style/Theme.MaterialComponents.Light" />

            <com.google.android.material.chip.Chip
                android:id="@+id/activity_form0_chip16"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/neck_pain"
                android:theme="@style/Theme.MaterialComponents.Light" />

            <com.google.android.material.chip.Chip
                android:id="@+id/activity_form0_chip17"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nosebleed"
                android:theme="@style/Theme.MaterialComponents.Light" />

            <com.google.android.material.chip.Chip
                android:id="@+id/activity_form0_chip18"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/permanent_thrist"
                android:theme="@style/Theme.MaterialComponents.Light" />

            <com.google.android.material.chip.Chip
                android:id="@+id/activity_form0_chip19"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stomachache"
                android:theme="@style/Theme.MaterialComponents.Light" />

            <com.google.android.material.chip.Chip
                android:id="@+id/activity_form0_chip20"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sweat"
                android:theme="@style/Theme.MaterialComponents.Light" />

            <com.google.android.material.chip.Chip
                android:id="@+id/activity_form0_chip21"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tremor"
                android:theme="@style/Theme.MaterialComponents.Light" />

            <com.google.android.material.chip.Chip
                android:id="@+id/activity_form0_chip22"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vertigo"
                android:theme="@style/Theme.MaterialComponents.Light" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/activity_form0_button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/next" />

</androidx.appcompat.widget.LinearLayoutCompat>
