<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".form.form13">

    <SeekBar
        android:id="@+id/form13_seekBar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:max="10"/>

    <Switch
        android:id="@+id/form13_switch2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/do_you_have_stomach_cramps" />

    <Switch
        android:id="@+id/form13_switch3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/do_you_often_have_indigestions" />

    <Switch
        android:id="@+id/form13_switch4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/are_you_constipated" />

    <Switch
        android:id="@+id/form13_switch5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/do_you_have_ibs_irritable_bowel_syndrome" />

    <Button
        android:id="@+id/form13_button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok" />


</androidx.appcompat.widget.LinearLayoutCompat>