<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".form.form7">

    <SeekBar
        android:id="@+id/form7_seekBar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:max="10"/>

    <Switch
        android:id="@+id/form7_switch2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/do_you_have_hallucination" />

    <Switch
        android:id="@+id/form7_switch3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/do_you_take_drugs" />

    <SeekBar
        android:id="@+id/form7_seekBar4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:max="10" />

    <Switch
        android:id="@+id/form7_switch5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/are_you_having_mood_swings" />

    <Button
        android:id="@+id/form7_button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok" />


</androidx.appcompat.widget.LinearLayoutCompat>